0-3_AI_Evaluation_Engine/설계문서_V7.0/V27/instructions/2_collect/cat01_expertise.md
# Category 01: Expertise (전문성) - 수집 지침서 V27.0

---

## 1. 카테고리 정의

### 한글 정의
직무 수행에 필요한 지식, 기술, 경험의 보유 수준

### 영문 정의
The level of knowledge, skills, and experience required to perform duties effectively

### 학술 근거
- **Stoker (2024)**: Competence의 핵심, "필요한 지식과 기술 보유"
- **Slough (2024)**: 4차원 능력의 기반
- **Volden & Wiseman (2024)**: LES 프레임워크의 전문성 측정
- **LEVER (2024)**: 입법 효과성의 핵심 요소

---

## 2. 평가 범위

### [O] 전문성에 해당
- 학력, 학위 (고등학교, 대학교, 대학원)
- 전문 자격증 (변호사, 의사, 회계사 등)
- 경력 기간 및 경력 수준
- 직무 관련 전문지식
- 정책 기획 능력
- 예산/재정 이해도
- 학술 활동 (논문, 저서, 강연)
- 법안 발의 실적

### [X] 전문성 아님 (다른 카테고리)
- 조직 관리/위기 대응 → 카테고리 2 (리더십)
- 혁신 아이디어/미래 전략 → 카테고리 3 (비전)
- 부패/비리 → 카테고리 4 (청렴성)
- 약속 이행 → 카테고리 6 (책임성)

---

## 3. V27.0 기간 제한 (CRITICAL!)

### OFFICIAL 데이터: 최근 4년
```
수집 기간: 2022-01-07 ~ 2026-01-07
```

### PUBLIC 데이터: 최근 1년
```
수집 기간: 2025-01-07 ~ 2026-01-07
```

**위 기간 외의 데이터는 수집하지 마세요!**

---

## 4. OFFICIAL 출처 (50% 필수)

정부기관, 공공기관의 공식 기록으로 법적 근거가 있고 신뢰도가 높은 데이터

### 구체적 출처 (13개)

1. **선거관리위원회** (www.nec.go.kr)
   - 후보자 등록 정보, 학력/경력 공식 자료
   - 선거 공약 자료

2. **의안정보시스템** (likms.assembly.go.kr)
   - 발의 법안, 통과율
   - 대표발의/공동발의 이력
   - 상임위원회 활동 기록

3. **정보공개포털** (www.open.go.kr)
   - 정부 공식 문서
   - 정책 추진 내역

4. **지방재정365** (lofin.mois.go.kr)
   - 지방자치단체 예산/결산
   - 재정 건전성 지표

5. **감사원** (www.bai.go.kr)
   - 감사 결과 보고서
   - 적발 사항, 시정 요구

6. **국민권익위원회** (www.acrc.go.kr)
   - 부패 신고 처리 결과

7. **공직자윤리위원회** (www.pec.go.kr)
   - 재산 공개 자료
   - 병역/납세 정보

8. **대법원** (www.scourt.go.kr)
   - 판결문, 형사 처벌 기록

9. **정치자금포털** (www.nesdc.go.kr)
   - 정치자금 수입/지출 내역

10. **국가인권위원회** (www.humanrights.go.kr)
    - 인권침해 진정 사건

11. **매니페스토 실천본부** (www.manifesto.or.kr)
    - 공약 이행 평가

12. **행정안전부** (www.mois.go.kr)
    - 지방자치단체 평가

13. **지자체 공식 홈페이지**
    - 서울시 (www.seoul.go.kr)
    - 부산시 (www.busan.go.kr)
    - 경기도 (www.gg.go.kr)

### OFFICIAL 검색 팁 (전문성)
- 중앙선거관리위원회: 후보자 등록 시 제출한 학력/경력 공식 자료
- 국회의안정보시스템: 발의 법안으로 전문성 확인
- 공직자윤리위원회: 재산공개 시 경력 사항
- 대법원: 학력 위조 관련 판결문

---

## 5. PUBLIC 출처 (50% 필수)

공개된 정보이나 비공식적 출처로 접근성이 높고 실시간 반영 가능한 데이터

### 구체적 출처 (8개 유형)

1. **Wikipedia** (ko.wikipedia.org)
   - 정치인 프로필, 약력 정보

2. **빅카인즈** (bigkinds.or.kr)
   - 언론 기사 통합 검색

3. **시민단체 보고서**
   - 참여연대 (www.peoplepower21.org)
   - 경실련 (www.ccej.or.kr)
   - 한국투명성기구 (www.ti.or.kr)

4. **SNS**
   - 트위터/X, 페이스북, 인스타그램, 유튜브

5. **언론 보도**
   - 조선일보, 중앙일보, 동아일보
   - 한겨레, 경향신문
   - KBS, MBC, SBS, JTBC
   - 연합뉴스, 뉴시스, 뉴스1

6. **학술 자료**
   - Google Scholar
   - 한국학술정보 (KISS)
   - DBpia

7. **여론조사**
   - 갤럽, 리얼미터, 한국리서치

8. **뉴스 검색**
   - Google News, 네이버 뉴스, 다음 뉴스

### PUBLIC 검색 팁 (전문성)
- Wikipedia: 정치인 프로필, 학력/경력 요약
- 언론 보도: "{정치인명} 프로필" 검색
- 대학 홈페이지: 동문 소개, 학위 수여 기록
- 학술 DB: 논문 저자 검색 (Google Scholar, KISS)

---

## 6. 검색 키워드

### 기본 검색어
- "{정치인명} 학력"
- "{정치인명} 학위"
- "{정치인명} 대학교"
- "{정치인명} 대학원"
- "{정치인명} 경력"
- "{정치인명} 자격증"
- "{정치인명} 전문성"
- "{정치인명} 약력"
- "{정치인명} 법안 발의"

### 부정 주제 검색어 (20% 최소 보장용)
- "{정치인명} 학력 논란"
- "{정치인명} 경력 의혹"
- "{정치인명} 전문성 부족"
- "{정치인명} 학력 위조"
- "{정치인명} 무능"
- "{정치인명} 전문지식 결여"

---

## 7. 수집 구조 (카테고리당 50개)

```
총 50개:
├── Phase 1: 부정 주제 10개 (20%)
│   ├── OFFICIAL 5개 (4년 이내)
│   └── PUBLIC 5개 (1년 이내)
│
└── Phase 2: 자유 평가 40개 (80%)
    ├── OFFICIAL 20개 (4년 이내)
    └── PUBLIC 20개 (1년 이내)

결과: OFFICIAL 25개 (50%) + PUBLIC 25개 (50%)
```

---

## 8. 주의사항 (Pitfalls)

1. **학벌 과대평가 금지**: 명문대 출신이라도 경력이 짧으면 객관적으로 기록
2. **경력 허수 구별**: 명목상 경력 vs. 실질적 경력 구분
3. **무관 자격증 제외**: 정치와 무관한 자격증은 수집하지 않음
4. **시대 고려**: 과거 교육 환경 고려 (예: 고졸도 당시엔 평균 이상)
5. **학력 위조 확인**: 의혹과 확정 판결 구분하여 기록

---

## 9. JSON 출력 형식

```json
{
  "items": [
    {
      "item_num": 1,
      "data_title": "간결한 제목 (20자 이내)",
      "data_content": "구체적 내용 (사실 기반, 100-300자)",
      "data_source": "구체적 출처명",
      "source_url": "https://...",
      "source_type": "OFFICIAL",
      "data_date": "2025-06-15"
    }
  ]
}
```

### 필드 설명
| 필드 | 설명 | 필수 |
|------|------|------|
| item_num | 항목 번호 (1~50) | O |
| data_title | 간결한 제목 (20자 이내) | O |
| data_content | 구체적 내용 (100-300자) | O |
| data_source | 출처명 (기관/언론사명) | O |
| source_url | 실제 존재하는 URL | O |
| source_type | "OFFICIAL" 또는 "PUBLIC" | O |
| data_date | YYYY-MM-DD 형식 | O |

### 주의
- **rating 필드 포함하지 마세요!** 수집 단계에서는 평가 없음
- source_type은 반드시 대문자

---

## 10. 체크리스트

수집 완료 전 확인:
- [ ] 부정 주제 최소 10개 (20%) 확보
- [ ] OFFICIAL 출처 25개 (50%) 확보
- [ ] PUBLIC 출처 25개 (50%) 확보
- [ ] OFFICIAL: 4년 이내 데이터만
- [ ] PUBLIC: 1년 이내 데이터만
- [ ] source_type: 대문자로 표기
- [ ] source_url: 실제 존재하는 URL
- [ ] rating 필드 없음 확인
- [ ] 총 50개 항목 확인

---

**V27.0 전문성 수집 지침서 끝**
