0-3_AI_Evaluation_Engine/설계문서_V7.0/V28/instructions/2_collect/cat01_expertise.md
# Category 01: Expertise (전문성) - 수집 지침서 V28

---

## 1. 카테고리 정의

### 한글 정의
직무 수행에 필요한 지식, 기술, 경험의 보유 수준

### 영문 정의
The level of knowledge, skills, and experience required to perform duties effectively

### 학술 근거
- **Stoker (2024)**: Competence의 핵심, "필요한 지식과 기술 보유"
- **Slough (2024)**: 4차원 능력의 기반
- **Volden & Wiseman (2024)**: LES 프레임워크의 전문성 측정
- **LEVER (2024)**: 입법 효과성의 핵심 요소

---

## 2. 평가 범위 - V28.3 구체적 10개 항목

### 🎯 전문성 = 📚 지식/학력/자격/경력 관련만!

```
⚠️ 아래 10개 항목만 수집하세요!
⚠️ 항목에 없는 내용은 다른 카테고리입니다!
```

### ✅ [O] 전문성 구체적 10개 항목

| # | 항목명 | 설명 | 출처 |
|---|--------|------|------|
| 1-1 | **최종 학력 수준** | 박사/석사/학사/전문대 학위 | OFFICIAL |
| 1-2 | **직무 관련 자격증** | 변호사, CPA, 교원자격증 등 | OFFICIAL |
| 1-3 | **관련 분야 경력 연수** | 공직+민간 경력 합산 | OFFICIAL |
| 1-4 | **연간 직무 교육 이수** | 의회/기관 교육 참여 시간 | OFFICIAL |
| 1-5 | **전문 분야 기고/저서** | 전문지 기고, 저서 출판 | PUBLIC |
| 1-6 | **학술 연구 실적** | 논문, Google Scholar 피인용 | PUBLIC |
| 1-7 | **위키피디아 전문성 기술** | 학력/경력 조회수 | PUBLIC |
| 1-8 | **전문 분야 수상** | 학술/전문 분야 수상 경력 | OFFICIAL |
| 1-9 | **전문가 위원회 참여** | 자문위원, 심의위원 활동 | OFFICIAL |
| 1-10 | **전문성 관련 언론 평가** | "전문가", "실력파" 키워드 보도 | PUBLIC |

### ❌ [X] 전문성 아님 - 다른 카테고리 (필독!)

```
🚨🚨🚨 다음은 절대 전문성으로 수집하지 마세요! 🚨🚨🚨

❌ 법안 발의/통과 실적 → 리더십 (2)
❌ 조직 관리/위기 대응 → 리더십 (2)
❌ 미래 전략/혁신 아이디어 → 비전 (3)

❌ 뇌물, 횡령, 배임 → 청렴성 (4)
❌ 정치자금 수수 의혹 → 청렴성 (4)
❌ 재산 형성 의혹 → 청렴성 (4)

❌ 표절 의혹 → 윤리성 (5)
❌ 가족 비위/논란 → 윤리성 (5)

❌ 공약 이행/불이행 → 책임감 (6)
```

**핵심 구분**: "지식/자격/경력이 있는가?" → 전문성

```
❌ 잘못된 예:
Expertise에 "인사청문회 재산 논란" 수집

✅ 올바른 예:
Integrity에 "인사청문회 재산 논란" 수집
```

---

## 3. V28 기간 제한 (CRITICAL! - 사건 발생 시점 기준!)

### OFFICIAL 데이터: 최근 4년 (사건 발생일 기준!)
```
사건 발생 기간: 2022-01-13 ~ 2026-01-13
```

### PUBLIC 데이터: 최근 2년 (사건 발생일 기준!)
```
사건 발생 기간: 2024-01-13 ~ 2026-01-13
```

**위 기간 외의 데이터는 수집하지 마세요!**



### 🚨🚨 콘텐츠 기반 과거 사건 필터링 (V28.1 필수!) 🚨🚨

**수집 전 내용(content)에서 과거 연도를 반드시 확인!**

```
⛔ 다음 패턴이 내용에 포함되면 절대 수집 금지:

1. 과거 연도 직접 언급 (OFFICIAL: 2022년 미만, PUBLIC: 2024년 미만):
   - "2002년", "2010년", "2015년" 등 기준 초과 연도 → ❌ 금지!
   - "10년 전", "20년 전", "수년 전" → ❌ 금지!
   - "과거", "예전", "당시" + 구체적 사건 → ❌ 금지!

2. 청문회/재조명에서 과거 사건 언급:
   - "청문회에서 ○○년 사건 질의" → ❌ 금지!
   - "과거 ○○ 의혹 재조명" → ❌ 금지!
   - "예전 ○○ 논란 재점화" → ❌ 금지!

3. 과거 판결/확정:
   - "○○년 유죄 확정" → ❌ 금지! (사건 연도 기준)
   - "과거 ○○ 혐의로 처벌" → ❌ 금지!

✅ 수집 가능 - 현재 시점 사건만:
   - "2024년 새로운 의혹 제기" → ✅ OK
   - "2025년 청문회 답변 태도 논란" → ✅ OK
   - "최근 정책 성과 발표" → ✅ OK
```

**핵심: data_content 내용을 읽고, 사건 발생 연도가 기준 외이면 수집하지 마세요!**

### 🚨🚨 과거 사건 언어 패턴 필터링 (V28.2 강화!) 🚨🚨

**연도 없이도 과거 사건임을 알 수 있는 표현 차단!**

```
⛔ 다음 표현이 포함되면 수집 금지 (과거 사건 신호):

1. 진행형/지속 표현 (= 오래된 사건의 증거):
   - "논란이 지속" / "의혹이 지속" / "논란이 계속"
   - "의혹이 계속 제기" / "비판이 이어지고"
   - "여전히 논란" / "아직도 해결되지 않은"
   - "지속적으로 제기되는" / "끊이지 않는 논란"

2. 추가/새로운 표현 (= 기존 사건이 오래됨):
   - "추가 의혹" / "추가 논란" / "추가 정황"
   - "새로운 정황이 드러나" / "새로운 증거"
   - "기존 논란을 넘어서" / "기존에 알려진"
   - "또다시 논란" / "다시 도마 위에"

3. 재조명/환기 표현:
   - "재조명" / "재점화" / "다시 주목"
   - "다시 거론" / "다시 언급" / "재부각"
   - "과거 행적" / "과거 발언" / "과거 이력"

💡 판단 원칙:
"이 표현이 나오면 사건이 처음 발생한 것이 아니다"
→ 처음이 아니면 = 과거 사건 = 기간 검증 대상!
```

### 🚨🚨 중복 수집 강화 규칙 (V28.2 필수!) 🚨🚨

**동일 사건의 다양한 표현을 1건으로 통합!**

```
⛔ 중복 수집 금지 - 핵심 규칙:

1. 동일 주체 + 동일 유형 = 1건만:
   ❌ "A 의혹" + "A 논란" + "A 의혹 지속"
   ✅ 위 3건은 모두 같은 사건 → 1건만 수집!

2. 핵심 키워드 중복 체크:
   - 비위 키워드: 표절, 비리, 횡령, 배임, 뇌물, 정치자금
   - 주체: 본인, 아들, 딸, 배우자, 가족
   - 같은 주체 + 같은 키워드 = 동일 사건!

3. 제목 변형 인식:
   ❌ "A 의혹" = "A 논란" = "A 의혹 제기" = "A 논란 지속"
   ✅ 모두 같은 사건 → 1건만!

4. 후속 보도 = 중복:
   - "○○ 의혹 추가 정황" → 원래 의혹과 동일
   - "○○ 논란 확산" → 원래 논란과 동일
   - "○○ 의혹 재점화" → 원래 의혹과 동일
```

---

## 4. OFFICIAL 출처 (50% 필수)

정부기관, 공공기관의 공식 기록으로 법적 근거가 있고 신뢰도가 높은 데이터

### 구체적 출처 (13개)

1. **선거관리위원회** (www.nec.go.kr)
   - 후보자 등록 정보, 학력/경력 공식 자료
   - 선거 공약 자료

2. **의안정보시스템** (likms.assembly.go.kr)
   - 발의 법안, 통과율
   - 대표발의/공동발의 이력
   - 상임위원회 활동 기록

3. **정보공개포털** (www.open.go.kr)
   - 정부 공식 문서
   - 정책 추진 내역

4. **지방재정365** (lofin.mois.go.kr)
   - 지방자치단체 예산/결산
   - 재정 건전성 지표

5. **감사원** (www.bai.go.kr)
   - 감사 결과 보고서
   - 적발 사항, 시정 요구

6. **국민권익위원회** (www.acrc.go.kr)
   - 부패 신고 처리 결과

7. **공직자윤리위원회** (www.pec.go.kr)
   - 재산 공개 자료
   - 병역/납세 정보

8. **대법원** (www.scourt.go.kr)
   - 판결문, 형사 처벌 기록

9. **정치자금포털** (www.nesdc.go.kr)
   - 정치자금 수입/지출 내역

10. **국가인권위원회** (www.humanrights.go.kr)
    - 인권침해 진정 사건

11. **매니페스토 실천본부** (www.manifesto.or.kr)
    - 공약 이행 평가

12. **행정안전부** (www.mois.go.kr)
    - 지방자치단체 평가

13. **지자체 공식 홈페이지**
    - 서울시 (www.seoul.go.kr)
    - 부산시 (www.busan.go.kr)
    - 경기도 (www.gg.go.kr)

### OFFICIAL 검색 팁 (전문성)
- 중앙선거관리위원회: 후보자 등록 시 제출한 학력/경력 공식 자료
- 국회의안정보시스템: 발의 법안으로 전문성 확인
- 공직자윤리위원회: 재산공개 시 경력 사항
- 대법원: 학력 위조 관련 판결문

---

## 5. PUBLIC 출처 (50% 필수)

공개된 정보이나 비공식적 출처로 접근성이 높고 실시간 반영 가능한 데이터

### 구체적 출처 (8개 유형)

1. **Wikipedia** (ko.wikipedia.org)
   - 정치인 프로필, 약력 정보

2. **빅카인즈** (bigkinds.or.kr)
   - 언론 기사 통합 검색

3. **시민단체 보고서**
   - 참여연대 (www.peoplepower21.org)
   - 경실련 (www.ccej.or.kr)
   - 한국투명성기구 (www.ti.or.kr)

4. **SNS**
   - 트위터/X, 페이스북, 인스타그램, 유튜브

5. **언론 보도**
   - 조선일보, 중앙일보, 동아일보
   - 한겨레, 경향신문
   - KBS, MBC, SBS, JTBC
   - 연합뉴스, 뉴시스, 뉴스1

6. **학술 자료**
   - Google Scholar
   - 한국학술정보 (KISS)
   - DBpia

7. **여론조사**
   - 갤럽, 리얼미터, 한국리서치

8. **뉴스 검색**
   - Google News, 네이버 뉴스, 다음 뉴스

### PUBLIC 검색 팁 (전문성)
- Wikipedia: 정치인 프로필, 학력/경력 요약
- 언론 보도: "{정치인명} 프로필" 검색
- 대학 홈페이지: 동문 소개, 학위 수여 기록
- 학술 DB: 논문 저자 검색 (Google Scholar, KISS)

---

## 6. 검색 키워드

### 기본 검색어
- "{정치인명} 학력"
- "{정치인명} 학위"
- "{정치인명} 대학교"
- "{정치인명} 대학원"
- "{정치인명} 경력"
- "{정치인명} 자격증"
- "{정치인명} 전문성"
- "{정치인명} 약력"
- "{정치인명} 법안 발의"

### 부정 주제 검색어 (20% 강제)
- "{정치인명} 학력 논란"
- "{정치인명} 경력 의혹"
- "{정치인명} 전문성 부족"
- "{정치인명} 학력 위조"
- "{정치인명} 무능"
- "{정치인명} 전문지식 결여"

### 긍정 주제 검색어 (20% 강제)
- "{정치인명} 법안 통과"
- "{정치인명} 전문성 인정"
- "{정치인명} 정책 성과"
- "{정치인명} 입법 실적"
- "{정치인명} 전문가 평가"
- "{정치인명} 학위 취득"
- "{정치인명} 수상"

---

## 7. 수집 구조 (카테고리당 50개) - V28 균형 수집

**목적: 긍정 편향과 부정 편향 모두 방지**

### 🚨 V28.5 전체 수집량 제한 (필수!)
```
┌─────────────────────────────────────────────────────────────┐
│ 🎯 목표: 500개 (10카테고리 × 50개)                          │
│ 🚫 최대: 550개 (목표 + 10%)                                 │
│                                                             │
│ ⚠️ 550개 초과 절대 금지!                                    │
│ ⚠️ 550개 도달 시 즉시 수집 중단!                            │
│ ⚠️ 요청 개수만큼만 반환! (5개 요청 시 5개만!)               │
└─────────────────────────────────────────────────────────────┘
```

### 카테고리별 구조 (50개)
```
총 50개 = Phase 1 (10개) + Phase 2 (10개) + Phase 3 (30개)

┌─────────────────────────────────────────────────────────────┐
│ Phase 1: 부정 강제 10개 (20%)                               │
│ - 논란, 비판, 의혹, 실패 등                                 │
│ - OFFICIAL 부정 5개 (4년 이내)                              │
│ - PUBLIC 부정 5개 (2년 이내)                                │
├─────────────────────────────────────────────────────────────┤
│ Phase 2: 긍정 강제 10개 (20%)                               │
│ - 성과, 공약 이행, 수상, 긍정 평가 등                        │
│ - OFFICIAL 긍정 5개 (4년 이내)                              │
│ - PUBLIC 긍정 5개 (2년 이내)                                │
├─────────────────────────────────────────────────────────────┤
│ Phase 3: 자유 수집 30개 (60%) 🎲                            │
│ - 무작위(랜덤)로 수집 - 긍정/부정 상관없이!                  │
│ - OFFICIAL 자유 15개 (4년 이내)                             │
│ - PUBLIC 자유 15개 (2년 이내)                               │
│                                                             │
│ ⚠️ 자유 = 중립 아님! 랜덤 추출!                             │
│ ⚠️ 특정 성향으로 편향 수집 금지!                            │
│ ⚠️ 마치 복권 추첨처럼 무작위로!                             │
└─────────────────────────────────────────────────────────────┘

결과: OFFICIAL 25개 (50%) + PUBLIC 25개 (50%)
```

---

## 8. 주의사항 (Pitfalls)

1. **학벌 과대평가 금지**: 명문대 출신이라도 경력이 짧으면 객관적으로 기록
2. **경력 허수 구별**: 명목상 경력 vs. 실질적 경력 구분
3. **무관 자격증 제외**: 정치와 무관한 자격증은 수집하지 않음
4. **시대 고려**: 과거 교육 환경 고려 (예: 고졸도 당시엔 평균 이상)
5. **학력 위조 확인**: 의혹과 확정 판결 구분하여 기록

---

## 8-1. 중복 수집 금지 (CRITICAL!)

### 핵심 규칙
**동일한 사건/주제는 반드시 1개만 수집!**

### 금지 사항
- 같은 사건을 다른 날짜로 반복 수집 ❌
- 같은 사건을 다른 언론사로 반복 수집 ❌
- 같은 주제를 다른 표현으로 반복 수집 ❌

### 예시: 중복 수집 (잘못된 예)
```
[X] "서울대 법학과 졸업" (출처 A)
[X] "서울대학교 법학과 학사" (출처 B)
[X] "서울대 법대 졸업" (출처 C)
→ 모두 같은 학력! 1개만 수집해야 함
```

### 예시: 올바른 수집
```
[O] "서울대 법학과 졸업 (1985)" - 1개만!
[O] "변호사 자격증 취득 (1988)" - 별개 항목이므로 OK
[O] "행정고시 합격 (1987)" - 별개 항목이므로 OK
```

### 동일 사건 판단 기준
- 같은 학력/자격증/경력 정보
- 같은 법안 발의 건
- 후속 보도, 재조명 = 원래 사건과 동일

### 체크 방법
수집 전 스스로 확인:
1. "이 주제를 이미 수집했나?"
2. "비슷한 제목의 항목이 있나?"
3. "같은 사건의 다른 보도인가?"

**중복 수집 시 전체 응답 무효 처리됨!**

---

## 8-2. URL 규칙 (CRITICAL!)

### SNS (URL 불필요)
- 트위터/X, 페이스북, 유튜브, 인스타그램

### 웹사이트 (URL 필수!)
- 언론사, 위키, 시민단체 등 모든 웹 기반 출처

### 금지 사항
- ❌ URL 모르면서 수집 금지
- ❌ 가짜 URL 생성 금지

**URL 규칙 위반 시 전체 응답 무효 처리됨!**

---

## 8-3. 🚨🚨🚨 V28.6 웹검색 필수 규칙 (CRITICAL!) 🚨🚨🚨

### ⛔ AI 기억 기반 수집 절대 금지!

```
┌─────────────────────────────────────────────────────────────┐
│ 🚫 절대 금지: AI가 기억/학습 데이터로 내용 생성            │
│ 🚫 절대 금지: AI가 URL을 추측/생성                         │
│ 🚫 절대 금지: 존재 여부 확인 안 된 정보 수집               │
│                                                             │
│ ✅ 필수: 웹검색으로 실제 기사 먼저 찾기                    │
│ ✅ 필수: 검색 결과에서 URL 확보 후 수집                    │
│ ✅ 필수: 실제 존재하는 기사만 데이터로 변환                │
└─────────────────────────────────────────────────────────────┘
```

### 올바른 수집 프로세스

```
[STEP 1] 웹검색 실행
         └→ "[정치인명] 전문성" / "[정치인명] 학력" 등 검색
         └→ 검색 결과에서 실제 기사 URL 확보

[STEP 2] 기사 확인
         └→ 검색된 URL이 실제 존재하는지 확인
         └→ 기사 내용 읽고 정치인과 관련 있는지 확인

[STEP 3] 데이터 추출
         └→ 확인된 기사에서 제목/내용/날짜 추출
         └→ 실제 기사 URL을 source_url에 기록

[STEP 4] JSON 생성
         └→ 검색으로 찾은 실제 데이터만 포함
```

### 웹검색 키워드 가이드 (전문성)

```
긍정 검색어:
- "[정치인명] 전문가"
- "[정치인명] 경력 우수"
- "[정치인명] 법안 발의 성과"
- "[정치인명] 정책 전문"

부정 검색어:
- "[정치인명] 학력 위조"
- "[정치인명] 경력 논란"
- "[정치인명] 무능"
- "[정치인명] 전문성 부족"

중립 검색어:
- "[정치인명] 학력"
- "[정치인명] 경력"
- "[정치인명] 이력"
- "[정치인명] 프로필"
```

### 🚨 핵심 규칙

```
1. 웹검색 없이 수집한 데이터 = 무효!
2. 검색 결과에 없는 정보 = 수집 금지!
3. URL 접속 불가능 = 해당 데이터 삭제!
4. AI 기억으로 만든 스캔들 = 날조 = 절대 금지!
```

**웹검색 규칙 위반 시 전체 수집 데이터 무효 처리!**

---

## 9. JSON 출력 형식

```json
{
  "items": [
    {
      "item_num": 1,
      "data_title": "간결한 제목 (20자 이내)",
      "data_content": "구체적 내용 (사실 기반, 100-300자)",
      "data_source": "구체적 출처명",
      "source_url": "https://...",
      "source_type": "OFFICIAL",
      "data_date": "2025-06-15"
    }
  ]
}
```

### 필드 설명
| 필드 | 설명 | 필수 |
|------|------|------|
| item_num | 항목 번호 (1~50) | O |
| data_title | 간결한 제목 (20자 이내) | O |
| data_content | 구체적 내용 (100-300자) | O |
| data_source | 출처명 (기관/언론사명) | O |
| source_url | 실제 존재하는 URL | O |
| source_type | "OFFICIAL" 또는 "PUBLIC" | O |
| data_date | YYYY-MM-DD 형식 | O |

### 주의
- **rating 필드 포함하지 마세요!** 수집 단계에서는 평가 없음
- source_type은 반드시 대문자

---

## 10. 체크리스트

수집 완료 전 확인:
- [ ] **부정 강제 10개 (20%) 확보**
- [ ] **긍정 강제 10개 (20%) 확보**
- [ ] **자유 수집 30개 (60%) - 랜덤으로!**
- [ ] OFFICIAL 출처 25개 (50%) 확보
- [ ] PUBLIC 출처 25개 (50%) 확보
- [ ] OFFICIAL: 4년 이내 데이터만
- [ ] PUBLIC: 2년 이내 데이터만
- [ ] source_type: 대문자로 표기
- [ ] source_url: 실제 존재하는 URL
- [ ] **중복 없음 확인** (유사 제목 70% 이상 금지)
- [ ] rating 필드 없음 확인
- [ ] 총 50개 항목 확인

---

**V28 전문성 수집 지침서 끝**
